--- a/LabS2.html
+++ b/LabS2.html
@@ -6,36 +6,79 @@
     <link rel="stylesheet" href="css/LabS2.css">
 </head>
 <body>
-<div class="row">
-<div class="column">
-    <img src="imgs/images.jfif">
-</div>
-    <div class="column">
-        <div class="detail" style="">
-        <strong>Barbara</strong> Cristine Barreto da Conceicão<br>
-
+<div id="main">
+    <div id="header" class="mg border-bottom">
+        <img src="./imgs/chan-dung-nam.png">
+        <div id="total-info">
+            <p class="first">Barbara Cristine Barreto da Conceicão</p>
+            <p>#20/108,Silvio Romero St.</p>
+            <p>Santa Teresa - RJ</p>
+            <p>(21) 032.64869/ 032.74958</p>
+            <p>barbaracristine@gmail.com</p>
+            <p>http://br.linkedin.com/in/barbaracristine</p>
         </div>
     </div>
-</div>
-<div class="row">
-<h3><u>Presetation</u></h3>
-
-<p>
-    I worked in administrative
-</p>
-<h3>
-    <u>Academic</u>
-</h3>
-<p>
-    Bachelor's degree:
-</p>
-<h3>
-    <u>Languages (level)</u>
-</h3>
-<p>
-    English: Intermediate<br>
-    Spanish: Basic knowledge
-</p>
+    <div id="presentation" class="mg border-bottom">
+        <a href="#" class="link">Presentation</a>
+        <p>Như Tuổi Trẻ Online đã thông tin, Cơ quan cảnh sát điều tra Bộ Công an vừa</p><br>
+        <p>ban hành kết luận vụ án "buôn lậu", "rửa tiền" xảy ra tại Công ty TNHH</p>
+        <p>Đồng thời, cơ quan điều tra chuyển hồ sơ sang Viện Kiểm sát nhân dân tối cao</p>
+        <p>ừ năm 2013-2019, Công ty Nhật Cường kinh doanh mua bán điện tho</p>
+        <p>động và các thiết bị điện tử khác. Tuy nhiên, doanh nghiệp này nhập hàng của</p>
+        <p>Trong đó, giai đoạn 2014 - 2019 Nhật Cường bán hơn 255.000 </p>
+        <p>thoại, thiết bị điện tử với giá trị hơn 2.927 tỉ đồng. Bùi Quang Huy bỏ ra hơn 72</p>
+        <p>tỉ đồng để vận chuyển trái phép các thiết bị từ Trung Quốc về Việt Nam</p>
+        <p>phối, hưởng lợi bất chính hơn 221 tỉ đồng.</p>
+        <p>Đáng chú ý, trong kết luận điều tra có lời khai của bị can Nguyễn Bảo Ngọc</p><br>
+        <p><h6 class="heading6">Advanced MS Office</h6> - marcros, pivot table, proche, charts, formulas, presentation, direct mail, etc.</p>
+        <p><h6 class="heading6">Softwares</h6>: SAP Microsiga, IBM Notes, ComprasNet</p>
+        <p><h6 class="heading6">Financial Skill</h6>: Financial Mathematics, Cash Flow Analysist and Cash Budget</p><br>
+    </div>
+    <div id="Academic" class="mg border-bottom">
+        <a href="#" class="link">Academic</a>
+        <p>Bachelor's degree:</p>
+        <p><h6 class="heading6">Business Management</h6> - Veiga de Almeida University - 2008</p>
+        <p>Education Teaching in Management *(Pro-Docente)* SENAI</p><br>
+    </div>
+    <div id="Language" class="mg border-bottom">
+        <a href="#" class="link">Languages (level)</a>
+        <p>Engilsh</p>
+        <p>Spanish</p><br>
+    </div>
+    <div id="Other" class="mg border-bottom">
+        <a href="#" class="link">Other Skills</a>
+        <p>Microsiga</p>
+        <p>MS Project</p>
+        <p>MS Ofice</p>
+        <p>SAP R3</p><br>
+    </div>
+    <div id="Professional" class="mg border-bottom">
+        <a href="#" class="link">Professional Training Courses</a>
+        <p>abc</p>
+        <p>abc</p>
+        <p>abc</p>
+        <p>abc</p>
+        <p>abc</p>
+        <p>abc</p>
+        <p>abc</p>
+        <p>abc</p>
+        <p>abc</p><br>
+    </div>
+    <div id="Experience" class="mg border-bottom">
+        <a href="#" class="link">Professional Experience</a>
+        <div class="last">
+        <h4>Sep/09 - Nov/09</h4>
+        <div class="company">
+            <p>Company: abc-abcabc</p>
+            <p>Function: abc abc(abc)</p>
+        </div>
+        </div>
+        <div class="clear"></div>
+        <p>abc</p>
+        <p>abc</p>
+        <p>abc</p>
+        <p>abc</p><br>
+    </div>
 </div>
 </body>
 </html>
