--- a/menuLLP.html
+++ b/menuLLP.html
@@ -31,7 +31,7 @@
 
                 <div class="item-container">
                     <div class="coffee-item">
-                        <img src="./imgs/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.webp"  alt="Bạc sỉu" class="menu-img">
+                        <img src="https://product.hstatic.net/1000075078/product/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.jpg"  alt="Bạc sỉu" class="menu-img">
                         <div class="coffee-item-info">
                             <a href="#">BẠC SỈU</a>
                             <div class="coffee-item-price">
