--- a/menuLLP.html
+++ b/menuLLP.html
@@ -42,7 +42,7 @@
                     </div>
 
                     <div class="coffee-item">
-                        <img src="./imgs/bg.jpg" alt="Bạc sỉu" class="menu-img">
+                        <img src="https://product.hstatic.net/1000075078/product/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.jpg" alt="Bạc sỉu" class="menu-img">
                         <div class="coffee-item-info">
                             <a href="#">BẠC SỈU</a>
                             <div class="coffee-item-price">
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="coffee-item">
-                        <img src="./imgs/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.webp" alt="Bạc sỉu" class="menu-img">
+                        <img src="https://product.hstatic.net/1000075078/product/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.jpg" alt="Bạc sỉu" class="menu-img">
                         <div class="coffee-item-info">
                             <a href="#">BẠC SỈU</a>
                             <div class="coffee-item-price">
@@ -69,7 +69,7 @@
                     </div>
                     <div class="item-container">
                             <div class="coffee-item">
-                                <img src="./imgs/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.webp" alt="Bạc sỉu" class="menu-img">
+                                <img src="https://product.hstatic.net/1000075078/product/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.jpg" alt="Bạc sỉu" class="menu-img">
                                 <div class="coffee-item-info">
                                     <a href="#">TRÀ SỮA TRÂN CHÂU</a>
                                     <div class="coffee-item-price">
@@ -80,7 +80,7 @@
                             </div>
 
                             <div class="coffee-item">
-                                <img src="./imgs/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.webp" alt="Bạc sỉu" class="menu-img">
+                                <img src="https://product.hstatic.net/1000075078/product/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.jpg" alt="Bạc sỉu" class="menu-img">
                                 <div class="coffee-item-info">
                                     <a href="#">TRÀ SỮA MACCHIATO</a>
                                     <div class="coffee-item-price">
@@ -91,7 +91,7 @@
                             </div>
 
                             <div class="coffee-item">
-                                <img src="./imgs/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.webp" alt="Bạc sỉu" class="menu-img">
+                                <img src="https://product.hstatic.net/1000075078/product/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.jpg" alt="Bạc sỉu" class="menu-img">
                                 <div class="coffee-item-info">
                                     <a href="#">TRÀ SỮA LLP</a>
                                     <div class="coffee-item-price">
@@ -109,7 +109,7 @@
 
                     <div class="item-container">
                         <div class="coffee-item last">
-                            <img src="./imgs/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.webp" alt="Bạc sỉu" class="menu-img">
+                            <img src="https://product.hstatic.net/1000075078/product/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.jpg" alt="Bạc sỉu" class="menu-img">
                             <div class="coffee-item-info">
                                 <a href="#">TRÀ SỮA TRÂN CHÂU</a>
                                 <div class="coffee-item-price">
@@ -120,7 +120,7 @@
                         </div>
 
                         <div class="coffee-item last">
-                            <img src="./imgs/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.webp" alt="Bạc sỉu" class="menu-img">
+                            <img src="https://product.hstatic.net/1000075078/product/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.jpg" alt="Bạc sỉu" class="menu-img">
                             <div class="coffee-item-info">
                                 <a href="#">TRÀ SỮA MACCHIATO</a>
                                 <div class="coffee-item-price">
@@ -131,7 +131,7 @@
                         </div>
 
                         <div class="coffee-item last">
-                            <img src="./imgs/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.webp" alt="Bạc sỉu" class="menu-img">
+                            <img src="https://product.hstatic.net/1000075078/product/bac_siu_099c749a7d6044bc9f7f0eac7f57808f_large.jpg" alt="Bạc sỉu" class="menu-img">
                             <div class="coffee-item-info">
                                 <a href="#">TRÀ SỮA LLP</a>
                                 <div class="coffee-item-price">
